--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html>
-
-<img src="gangsta_juice.jfif" />
-
+  <head>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu+Mono" />
+    <meta charset="utf-8">
+    <title>Joel Allison</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div class="navpanel">
+      <header>
+        <h1><a href="index.html">Joel Allison</a></h1>
+      </header>
+      <nav>
+        <a href="index.html" class="clicked nav">about</a>
+        <a href="noises.html" class="nav">noises</a>
+        <a href="graphics.html" class="nav">graphics</a>
+        <a href="more.html" class="nav">more</a>
+      </nav>
+    </div>
+    <main>
+      <p>
+        I'm [words and stuff].
+      </p>
+    </main>
+</body>
 </html>
