--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
         I'm [words and stuff].
       </p>
     </main>
+    <footer>
+      <a href="https://github.com/joelallison/joelallison.github.io">source</a>
+    </footer>
 </body>
 </html>
