--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <main>
       <p>
-        I'm [words and stuff].
+        musician, programmer, artist, etc.
       </p>
     </main>
     <footer>
