--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <main>
       <p>
-        musician, programmer, artist, etc.
+        musician, recording engineer, programmer, artist, etc.
       </p>
     </main>
     <footer>
