--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <h1><a href="index.html">Joel Allison</a></h1>
       </header>
       <nav>
-        <a href="index.html" class="clicked nav">about</a>
-        <a href="noises.html" class="nav">noises</a>
-        <a href="graphics.html" class="nav">graphics</a>
-        <a href="more.html" class="nav">more</a>
+        <a href="index.html" class="clicked nav">home</a>
+        <a href="music-projects.html" class="nav">music I've worked on</a>
+        <a href="noises.html" class="nav">joel noises</a>
+        <a href="graphics.html" class="nav">other</a>
+        <a href="more.html" class="nav">about</a>
       </nav>
     </div>
     <main>
