--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu+Mono" />
     <meta charset="utf-8">
     <title>Joel Allison</title>
-    <link rel="stylesheet" href="{{ "styles.css" | prepend: site.baseurl }}?{{site.time | date: '%s%N'}}">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="navpanel">
