--- a/music-projects.html
+++ b/music-projects.html
@@ -15,7 +15,7 @@
         <a href="index.html" class="nav">home</a>
         <a href="music-projects.html" class="clicked nav">music I've worked on</a>
         <a href="noises.html" class="nav">joel noises</a>
-        <a href="more.html" class="nav">about</a>
+        <a href="about.html" class="nav">about</a>
       </nav>
     </div>
     <main>
