--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </p>
     </main>
     <footer>
-      <a href="https://github.com/joelallison/joelallison.github.io">source</a>
+      © joel allison 2023 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
     </footer>
 </body>
 </html>
