--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu+Mono" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Azeret+Mono:wght@0,700">
     <meta charset="utf-8">
     <title>Joel Allison</title>
     <link rel="stylesheet" href="styles.css">
