--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <p>
         musician, recording engineer, programmer, artist, etc.
       </p>
+      
+     <img src="ninepointredstar.svg" />
     </main>
     <footer>
       © joel allison 2023 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
