--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         musician, recording engineer, programmer, artist, etc.
       </p>
       
-     <img src="ninepointredstar.svg" />
+     <img src="tenpointredstar.svg" />
     </main>
     <footer>
       © joel allison 2023 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
