--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="navpanel">
       <header>
         <h1><a href="index.html">Joel Allison</a></h1>
+        <h2><mark>internet website</mark></h2>
       </header>
       <nav>
         <a href="index.html" class="clicked nav">home</a>
