--- a/music-projects.html
+++ b/music-projects.html
@@ -10,6 +10,7 @@
     <div class="navpanel">
       <header>
         <h1><a href="index.html">Joel Allison</a></h1>
+        <h5><mark>internet website</mark></h5>
       </header>
       <nav>
         <a href="index.html" class="nav">home</a>
