Update about.html with links section test

--- a/about.html
+++ b/about.html
@@ -23,6 +23,14 @@
       <p>
         about
       </p>
+      <a="#links">
+        <p>
+        <h3>Links!</h3>
+          <ul>
+            <li>test</li>
+          </ul>
+        </p>
+      </a>
     </main>
     <footer>
       © joel allison 2023 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
