--- a/noises.html
+++ b/noises.html
@@ -16,6 +16,7 @@
         <a href="index.html" class="nav">home</a>
         <a href="music-projects.html" class="nav">music I've worked on</a>
         <a href="noises.html" class="clicked nav">joel noises</a>
+        <a href="other-projects.html" class="nav">other projects</a>
         <a href="about.html" class="nav">about</a>
       </nav>
     </div>
