--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Azeret+Mono:wght@0,700">
     <meta charset="utf-8">
     <title>Joel Allison</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../style/styles.css">
   </head>
   <body>
     <div class="navpanel">
@@ -14,16 +14,24 @@
       </header>
       <nav>
         <a href="index.html" class="nav">home</a>
-        <a href="music-projects.html" class="clicked nav">music I've worked on</a>
+        <a href="music-projects.html" class="nav">music I've worked on</a>
         <a href="noises.html" class="nav">joel noises</a>
         <a href="other-projects.html" class="nav">other projects</a>
-        <a href="about.html" class="nav">about</a>
+        <a href="about.html" class="clicked nav">about</a>
       </nav>
     </div>
     <main>
       <p>
-        music projects
+        about
       </p>
+      <a="#links">
+        <p>
+        <h3>Links!</h3>
+          <ul>
+            <li>test</li>
+          </ul>
+        </p>
+      </a>
     </main>
     <footer>
       © joel allison 2023 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
