--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Azeret+Mono:wght@0,700">
     <meta charset="utf-8">
     <title>Joel Allison</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../style/styles.css">
   </head>
   <body>
     <div class="navpanel">
