First steps towards the new look

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <meta charset="utf-8">
         <title>Joel Allison</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Azeret+Mono:wght@0,700">
     </head>
     <body>
         <h1>Joel Allison</h1>
-        <p>This is some text.</p>
+        <div class="column1">testing</div>
+        <div class="column2">testing</div>
+        <div class="column3">testing</div>
         <footer>
             © joel allison 2023 -<a href="https://github.com/joelallison/joelallison.github.io">source</a>
           </footer>
