--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <h1>Joel Allison</h1>
-        <div class="column1">testing</div>
-        <div class="column2">testing</div>
-        <div class="column3">testing</div>
+        
+        <p>There is some text here, on this webbed-site. Truly revolutionary.</p>
+
         <footer>
             © joel allison 2023 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
           </footer>
