--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <h1>Joel Allison</h1>
-        
-        <p>There is some text here, on this webbed-site. Truly revolutionary.</p>
+
+        <ul><a href="about.html">what?</a></ul>
 
         <footer>
             © joel allison 2023 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
