redesign inspired by 100r.co and mabelye.com

--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Azeret+Mono:wght@0,700">
     </head>
     <body>
-        <h1>Joel Allison</h1>
-
-        <ul><a href="about.html">what?</a></ul>
-
+        <nav>
+            <h1 class="selected">joel allison</h1>
+                <section class="site-nav">
+                    <ul class="">
+                        <li><a href="index.html" class="selected">about / contact</a></li>
+                        <li><a href="music.html">music</a></li>
+                        <li><a href="doodles.html">doodles</a></li>
+                        <li><a href="gamedev.html">game development</a></li>
+                    </ul>
+                </section>
+        </nav>
+        <main>
+        </main>
         <footer>
+            <hr>
             © joel allison 2023 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
-          </footer>
+        </footer>
     </body>
 </html>
