--- a/doodles.html
+++ b/doodles.html
@@ -12,15 +12,15 @@
             <h1 class="selected">joel allison</h1>
                 <section class="site-nav">
                     <ul class="">
-                        <li><a href="index.html" class="selected">about / contact</a></li>
+                        <li><a href="index.html">about / contact</a></li>
                         <li><a href="music.html">music</a></li>
-                        <li><a href="doodles.html">doodles</a></li>
+                        <li><a href="doodles.html" class="selected">doodles</a></li>
                         <li><a href="gamedev.html">game development</a></li>
                     </ul>
                 </section>
         </nav>
         <main>
-            about
+            doodles
         </main>
         <footer>
             <hr>
