actually beginning to use this site :)

--- a/gamedev.html
+++ b/gamedev.html
@@ -13,14 +13,13 @@
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html">about / contact</a></li>
-                        <li><a href="music.html">music</a></li>
-                        <li><a href="doodles.html">doodles</a></li>
+                        <li><a href="discography.html">discography</a></li>
                         <li><a href="gamedev.html" class="selected">game development</a></li>
                     </ul>
                 </section>
         </nav>
         <main>
-            
+            <a href="https://www.instagram.com/p/C1sKUeHsrWe/">Exploring the idea of a patchbay based game</a>
         </main>
         <footer>
             <hr>
