--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html" class="selected">about / contact</a></li>
-                        <li><a href="music.html">music</a></li>
-                        <li><a href="doodles.html">doodles</a></li>
+                        <li><a href="discography.html">discography</a></li>
                         <li><a href="gamedev.html">game development</a></li>
                     </ul>
                 </section>
         </nav>
         <main>
-            about
+            Currently studying Music and Sound Recording on the <a href="https://iosr.uk/tonmeister/awards.php">Tonmeister</a> course.
         </main>
         <footer>
             <hr>
