--- a/discography.html
+++ b/discography.html
@@ -13,14 +13,15 @@
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html">about / contact</a></li>
-                        <li><a href="music.html" class="selected">music</a></li>
-                        <li><a href="doodles.html">doodles</a></li>
+                        <li><a href="discography.html" class="selected">discography</a></li>
                         <li><a href="gamedev.html">game development</a></li>
                     </ul>
                 </section>
         </nav>
         <main>
-            music
+            musicz
+
+            also <a href="https://soundcloud.com/joelallison">see my soundcloud</a> for little sketches of things
         </main>
         <footer>
             <hr>
