--- a/discography.html
+++ b/discography.html
@@ -25,7 +25,7 @@
         </main>
         <footer>
             <hr>
-            © joel allison 2024 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
+            joel allison 2024 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
         </footer>
     </body>
 </html>
