--- a/discography.html
+++ b/discography.html
@@ -19,7 +19,7 @@
                 </section>
         </nav>
         <main>
-            musicz
+            <p>musicz</p>
 
             also <a href="https://soundcloud.com/joelallison">see my soundcloud</a> for little sketches of things
         </main>
