use of paragraphs

--- a/discography.html
+++ b/discography.html
@@ -21,7 +21,7 @@
         <main>
             <p>musikz</p>
 
-            also <a href="https://soundcloud.com/joelallison">see my soundcloud</a> for little sketches of things
+            <p>also <a href="https://soundcloud.com/joelallison">see my soundcloud</a> for little sketches of things</p>
         </main>
         <footer>
             <hr>
