--- a/gamedev.html
+++ b/gamedev.html
@@ -19,7 +19,7 @@
                 </section>
         </nav>
         <main>
-            <a href="https://www.instagram.com/p/C1sKUeHsrWe/">Exploring the idea of a patchbay based game</a>
+            <p><a href="https://www.instagram.com/p/C1sKUeHsrWe/">Exploring the idea of a patchbay based game</a></p>
         </main>
         <footer>
             <hr>
