--- a/doodles.html
+++ b/doodles.html
@@ -20,7 +20,7 @@
                 </section>
         </nav>
         <main>
-            doodles
+            <p>doodles</p>
         </main>
         <footer>
             <hr>
