--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </section>
         </nav>
         <main>
-            Currently studying Music and Sound Recording on the <a href="https://iosr.uk/tonmeister/awards.php">Tonmeister</a> course.
+            <p>Currently studying Music and Sound Recording on the <a href="https://iosr.uk/tonmeister/awards.php">Tonmeister</a> course.</p>
         </main>
         <footer>
             <hr>
