work in progress

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </nav>
         <main>
             <p>Currently studying Music and Sound Recording on the <a href="https://iosr.uk/tonmeister/awards.php">Tonmeister</a> course.</p>
+            <p>This website is very much a work in progress.</p>
         </main>
         <footer>
             <hr>
