which font to go with ???

--- a/discography.html
+++ b/discography.html
@@ -5,11 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Joel Allison</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Azeret+Mono:wght@0,700">
     </head>
     <body>
         <nav>
-            <h1 class="selected">joel allison</h1>
+            <h1 class="selected">Joel Allison</h1>
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html">about / contact</a></li>
@@ -25,7 +24,7 @@
         </main>
         <footer>
             <hr>
-            joel allison 2024 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
+            Joel Allison 2024 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
         </footer>
     </body>
 </html>
