--- a/doodles.html
+++ b/doodles.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav>
-            <h1 class="selected">joel allison</h1>
+            <h1 class="selected">Joel Allison</h1>
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html">about / contact</a></li>
@@ -24,7 +24,7 @@
         </main>
         <footer>
             <hr>
-            joel allison 2024 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
+            Joel Allison 2024 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
         </footer>
     </body>
 </html>
