--- a/gamedev.html
+++ b/gamedev.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav>
-            <h1 class="selected">Joel Allison</h1>
+            <h1 class="selected">JOEL ALLISON</h1>
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html">about / contact</a></li>
