FUNKY BLUE PINK PURPLE!!!

--- a/doodles.html
+++ b/doodles.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <nav>
-            <h1 class="selected">JOEL ALLISON</h1>
+            <h1>JOEL ALLISON</h1>
+            <img src="profile pic may 2023.jpeg" width=256 height="256" class="filtered" />
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html">about / contact</a></li>
