--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     </head>
     <body>
         <nav>
-            <h1 class="selected">JOEL ALLISON</h1>
+            <h1>JOEL ALLISON</h1>
+            <img src="profile pic may 2023.jpeg" width=256 height="256" class="filtered" />
                 <section class="site-nav">
                     <ul class="">
-                        <li><a href="index.html" class="selected">about / contact</a></li>
-                        <li><a href="discography.html">discography</a></li>
+                        <li><a href="index.html" class="selected">about</a></li>
+                        <li><a href="discography.html">discography</a></li> 
                         <li><a href="gamedev.html">game development</a></li>
                     </ul>
                 </section>
@@ -24,7 +25,7 @@
         </main>
         <footer>
             <hr>
-            Joel Allison 2024 - <a href="https://github.com/joelallison/joelallison.github.io">source</a>
+            Joel Allison 2024 - <a href="https://github.com/joelallison/joelallison.github.io" class="selected">source</a>
         </footer>
     </body>
 </html>
