--- a/gamedev.html
+++ b/gamedev.html
@@ -10,7 +10,7 @@
     <body>
         <nav>
             <h1>JOEL ALLISON</h1>
-            <img src="profile pic may 2023.jpeg" width=256 height="256" class="filtered" />
+            <img src="profile pic may 2023.jpeg" width=192 height=192 class="filtered" />
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html">about / contact</a></li>
