--- a/discography.html
+++ b/discography.html
@@ -12,7 +12,7 @@
             <img src="profile pic may 2023.jpeg" width=192 height=192 class="filtered" />
                 <section class="site-nav">
                     <ul class="">
-                        <li><a href="index.html">about / contact</a></li>
+                        <li><a href="index.html">about</a></li>
                         <li><a href="discography.html" class="selected">discography</a></li>
                         <li><a href="gamedev.html">game development</a></li>
                     </ul>
