--- a/doodles.html
+++ b/doodles.html
@@ -13,7 +13,7 @@
             <img src="profile pic may 2023.jpeg" width=192 height=192 class="filtered" />
                 <section class="site-nav">
                     <ul class="">
-                        <li><a href="index.html">about / contact</a></li>
+                        <li><a href="index.html">about</a></li>
                         <li><a href="discography.html">discography</a></li>
                         <li><a href="doodles.html" class="selected">doodles</a></li>
                         <li><a href="gamedev.html">game development</a></li>
