--- a/gamedev.html
+++ b/gamedev.html
@@ -10,7 +10,8 @@
     <body>
         <nav>
             <h1>JOEL ALLISON</h1>
-            <img src="profile pic may 2023.jpeg" width=192 height=192 class="filtered" />
+            <h3>(they/them)</h3>
+            <img src="filtered profile pic may 2023.png" width=192 height=192 />
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html">about</a></li>
@@ -20,6 +21,8 @@
                 </section>
         </nav>
         <main>
+            <H1>GAME DEVELOPMENT</H1>
+            <br>
             <p><a href="https://www.instagram.com/p/C1sKUeHsrWe/">Exploring the idea of a patchbay based game</a></p>
         </main>
         <footer>
