--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <body>
         <nav>
             <h1>JOEL ALLISON</h1>
-            <img src="profile pic may 2023.jpeg" width=192 height=192 class="filtered" />
+            <h3>(they/them)</h3>
+            <img src="filtered profile pic may 2023.png" width=192 height=192 />
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html" class="selected">about</a></li>
@@ -20,8 +21,12 @@
                 </section>
         </nav>
         <main>
+            <H1>ABOUT</H1>
+            <br>
             <p>Currently studying Music and Sound Recording on the <a href="https://iosr.uk/tonmeister/awards.php">Tonmeister</a> course.</p>
-            <p>This website is very much a work in progress.</p>
+            <p>This website (which is fully hand-written btw !!) is very much a work in progress.</p>
+
+            </p>
         </main>
         <footer>
             <hr>
