--- a/doodles.html
+++ b/doodles.html
@@ -10,7 +10,8 @@
     <body>
         <nav>
             <h1>JOEL ALLISON</h1>
-            <img src="profile pic may 2023.jpeg" width=192 height=192 class="filtered" />
+            <h3>(they/them)</h3>
+            <img src="filtered profile pic may 2023.png" width=192 height=192/>
                 <section class="site-nav">
                     <ul class="">
                         <li><a href="index.html">about</a></li>
@@ -21,6 +22,8 @@
                 </section>
         </nav>
         <main>
+            <H1>DOODLES</H1>
+            <br>
             <p>doodles</p>
         </main>
         <footer>
