--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <p>Currently studying Music and Sound Recording on the <a href="https://iosr.uk/tonmeister/awards.php">Tonmeister</a> course.</p>
             <p>This website (which is fully hand-written btw !!) is very much a work in progress.</p>
 
+            <li><a href="https://www.youtube.com/@joelall1son"></a></li>
+
             </p>
         </main>
         <footer>
