--- a/index.html
+++ b/index.html
@@ -8,31 +8,6 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
     </head>
     <body>
-        <nav>
-            <h1>JOEL ALLISON</h1>
-            <h3>(they/them)</h3>
-            <img src="filtered profile pic may 2023.png" width=192 height=192 />
-                <section class="site-nav">
-                    <ul class="">
-                        <li><a href="index.html" class="selected">about</a></li>
-                        <li><a href="discography.html">discography</a></li> 
-                        <li><a href="gamedev.html">game development</a></li>
-                    </ul>
-                </section>
-        </nav>
-        <main>
-            <H1>ABOUT</H1>
-            <br>
-            <p>Currently studying Music and Sound Recording on the <a href="https://iosr.uk/tonmeister/awards.php">Tonmeister</a> course.</p>
-            <p>This website (which is fully hand-written btw !!) is very much a work in progress.</p>
-
-            <li><a href="https://www.youtube.com/@joelall1son">https://www.youtube.com/@joelall1son</a></li>
-
-            </p>
-        </main>
-        <footer>
-            <hr>
-            Joel Allison 2024 - <a href="https://github.com/joelallison/joelallison.github.io" class="selected">source</a>
-        </footer>
+        <div class="centered">under construction</div>
     </body>
 </html>
