--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
     </head>
     <body>
-        <div class="centered">under construction</div>
+        <div class="centered">musician, nerd, maker of worlds [inside my brain]</div>
     </body>
 </html>
