--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
     </head>
     <body>
+        <div class="centered"><img src="strictly_band_edit.jpg" /></div>
         <div class="centered">fan of wind chimes</div>
     </body>
 </html>
