--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </head>
     <body>
         <div class="centered-img"><img src="strictly_band_edit.jpg" /></div>
-        <div class="centered">fan of wind chimes</div>
+        <div class="centered"><p>fan of wind chimes</p></div>
     </body>
 </html>
