--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
     </head>
     <body>
-        <h1 style="padding: 30px">fan of wind chimes, <br> likely asleep right now</h1>
-        <div style="padding: 30px">
+        <h1 style="padding-right: 30px">fan of wind chimes, <br> likely asleep right now</h1>
+        <div style="padding-left: 30px">
             <div id="w4aa5b0c1a58972b94e01c27f4e5169d7"></div><script type="text/javascript" charset="UTF-8" src="https://www.librarything.com/widget_get.php?userid=joelallison&theID=w4aa5b0c1a58972b94e01c27f4e5169d7"></script><noscript><a href="https://www.librarything.com/profile/joelallison">My Library</a> at <a href="https://www.librarything.com">LibraryThing</a></noscript>
         </div>
         </body>
