--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" type="text/css" href="./styles.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
     </head>
-    <body>
-        <h1 style="padding-right: 30px">fan of wind chimes, <br> likely asleep right now</h1>
-        <div style="padding-left: 30px">
-            <div id="w4aa5b0c1a58972b94e01c27f4e5169d7"></div><script type="text/javascript" charset="UTF-8" src="https://www.librarything.com/widget_get.php?userid=joelallison&theID=w4aa5b0c1a58972b94e01c27f4e5169d7"></script><noscript><a href="https://www.librarything.com/profile/joelallison">My Library</a> at <a href="https://www.librarything.com">LibraryThing</a></noscript>
-        </div>
+        <body>
+            <div class="content">
+                <h1>joel allison: human being(?)</h1>
+                <div class="bio">here we go!</div>
+            </div>
         </body>
 </html>
