--- a/index.html
+++ b/index.html
@@ -10,7 +10,33 @@
         <body>
             <div class="content">
                 <h1>joel allison: human being(?)</h1>
-                <div class="bio">here we go!</div>
+                <div class="bio">here we go! gallery time</div>
+                <div class="row">
+                    <div class="column">
+                        <img src="photos/gallery_0.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_1.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_13.jpg" style="width:100%">
+                        
+                    </div>
+                    <div class="column">
+                        <img src="photos/gallery_8.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_4.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_3.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_6.MP.jpg" style="width:100%">
+                    </div>
+                    <div class="column">
+                        <img src="photos/gallery_11.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_5.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_9.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_10.MP.jpg" style="width:100%">
+                    </div>
+                    <div class="column">
+                        <img src="photos/gallery_14.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_2.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_7.MP.jpg" style="width:100%">
+                        <img src="photos/gallery_12.MP.jpg" style="width:100%">
+                    </div>
+                </div>
             </div>
         </body>
 </html>
