--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
     </head>
         <body>
             <div class="content">
-                <h1>joel allison: human being(?)</h1>
-                <div class="bio">here we go! gallery time</div>
+                <div class="header">
+                    <h1>joel allison: human being(?)</h1>
+                    <div class="nav">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="projects.html">Projects</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="about.html">About</a></li>
+                          </ul>
+                    </div>
+                </div>
+                <div class="bio">here are some photos:</div>
                 <div class="row">
                     <div class="column">
                         <img src="photos/gallery_0.MP.jpg" style="width:100%">
