yay! more updates! fun!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                           </ul>
                     </div>
                 </div>
-                <div class="bio">here are some photos:</div>
+                <div class="bio">audio engineer, multi-instrumentalist, producer, creative, awkward weirdo, etc. </div>
                 <div class="row">
                     <div class="column">
                         <img src="photos/gallery_0.MP.jpg" style="width:100%">
