nav has link icons!

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                             <li><a href="projects.html">Projects</a></li>
                             <li><a href="contact.html">Contact</a></li>
                             <li><a href="about.html">About</a></li>
+                            <li><a href="https://instagram.com/joelall1son"><img style="width: 1em;" src="gentlecons/instagram-svgrepo-com.svg"/></a></li>
+                            <li><a href="https://www.youtube.com/@joelall1son"><img style="width: 1em;" src="gentlecons/youtube-svgrepo-com.svg"/></a></li>
+                            <li><a href="mailto:thatjoelallison@gmail.com"><img style="width: 1em;" src="gentlecons/mail-svgrepo-com.svg"/></a></li>
+                            <li><a href="https://linktree.com/joelallison"><img style="width: 1em;" src="gentlecons/anchor-link-svgrepo-com.svg"/></a></li>
                           </ul>
                     </div>
                 </div>
