i'm like, SO non-chalant

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <body>
             <div class="content">
                 <div class="header">
-                    <h1>joel allison: human being(?)</h1>
+                    <h1>joel allison</h1>
                     <div class="nav">
                         <ul>
                             <li><a href="index.html">Home</a></li>
@@ -24,7 +24,7 @@
                           </ul>
                     </div>
                 </div>
-                <div class="bio">audio engineer, multi-instrumentalist, producer, creative, awkward weirdo, etc. </div>
+                <div class="bio"></div>
                 <div class="row">
                     <div class="column">
                         <img src="photos/gallery_0.MP.jpg" style="width:100%">
