--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                           </ul>
                     </div>
                 </div>
-                <div class="bio"></div>
+                <div class="bio">digital zine & portfolio, kinda</div>
                 <div class="row">
                     <div class="column">
                         <img src="photos/gallery_0.MP.jpg" style="width:100%">
