--- a/index.html
+++ b/index.html
@@ -10,21 +10,17 @@
         <body>
             <div class="content">
                 <div class="header">
-                    <h1>joel allison: human being(?)</h1>
+                    <h1>joel allison</h1>
                     <div class="nav">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="projects.html">Projects</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="index.html">Projects</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="https://instagram.com/joelall1son"><img style="height: 1em;" src="gentlecons/instagram-svgrepo-com.svg"/></a></li>
-                            <li><a href="https://www.youtube.com/@joelall1son"><img style="height: 1em;" src="gentlecons/youtube-svgrepo-com.svg"/></a></li>
                             <li><a href="mailto:thatjoelallison@gmail.com"><img style="height: 1em;" src="gentlecons/mail-svgrepo-com.svg"/></a></li>
                             <li><a href="https://linktree.com/joelallison"><img style="height: 1em;" src="gentlecons/anchor-link-svgrepo-com.svg"/></a></li>
                           </ul>
                     </div>
                 </div>
-                <div class="bio">audio engineer, multi-instrumentalist, producer, creative, awkward weirdo, etc. </div>
+                 <div class="bio">digital zine & portfolio, kinda</div>
                 <div class="row">
                     <div class="column">
                         <img src="photos/gallery_0.MP.jpg" style="width:100%">
@@ -50,6 +46,6 @@
                         <img src="photos/gallery_12.MP.jpg" style="width:100%">
                     </div>
                 </div>
-            </div>
+                
         </body>
 </html>
